Fixed combobox style

--- a/index.html
+++ b/index.html
@@ -327,13 +327,13 @@
 		</div>
 		<div class="nav-content">
 		<!--use div because anchor poses problems at swipe-->
-		  <button class="nav-item nav-trigger" data-side="left">☰</button>
+		  <button class="tab nav-item nav-trigger" data-side="left">☰</button>
 		  <div class="dropup nav-item active-tab">
-			<button>2023 <span class="rightmost">▲</span></button>
+			<button>2023 <span class="rightmost">▼</span></button>
 		  </div>
-		  <button class="nav-item">Feb ▼</button>
-		  <button class="nav-item">Optional expenses</button>
-		  <button class="nav-trigger nav-item" data-side="right">☰</button>
+		  <button class="tab nav-item">Feb <span class="rightmost">▲</span></button>
+		  <button class="tab nav-item">Optional expenses <span class="rightmost">▲</span></button>
+		  <button class="tab nav-trigger nav-item" data-side="right">☰</button>
 		</div>
 		</nav>
 	</main>
