--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
 	</main>
 	
 	<!-- Modal backdrop. Code adapted from: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal_bottom-->
-	<div id="modal-backdrop" class="modal"></div>
+	<div id="add-spending-backdrop" class="modal"></div>
 	<!-- Modal content -->
-	  <div id="modal-content" class="modal-content">
+	  <div id="add-spending-content" class="modal-content">
 		<div class="modal-header">
 		<h2>Insert Spending</h2>
 		</div>
@@ -353,7 +353,7 @@
 			<input id="description-input-field" type="text" required>
 			<label>Description:</label>
 		  </div>
-		  <div class="input-field">
+		  <div id="category-input" class="input-field">
 			<input type="text" required>
 			<label>Category:</label>
 		  </div>
@@ -366,10 +366,79 @@
 		  <h3>Save</h3><h3>Cancel</h3><h3>Save</h3>
 		</div>
 	</div>
+
+	<!-- Modal backdrop.-->
+	<div id="category-backdrop" class="modal"></div>
+	<!-- Modal content -->
+	  <div id="category-content" class="modal-content">
+		<div class="modal-header">
+		<h2>Select a category</h2>
+		</div>
+
+		
+		<div class="accordion_container modal-body">
+			<div class="container">
+				<div class="accordion">
+					<button class="header">
+						Collapsible Group Item #1
+						<i class="icon"></i>
+					</button>
+					<div class="body">
+						There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+						by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of
+						Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+						generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the
+						Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to
+						generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition,
+						injected humour, or non-characteristic words etc.
+					</div>
+				</div>
+				<div class="accordion">
+					<button class="header">
+						Collapsible Group Item #2
+						<i class="icon"></i>
+					</button>
+					<div class="body">
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+						dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+						book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
+						unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+						recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+					</div>
+				</div>
+				<div class="accordion">
+					<button class="header">
+						Collapsible Group Item #3
+						<i class="icon"></i>
+					</button>
+					<div class="body">
+						It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
+						layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
+						'Content here, content here', making it look like readable English. Many desktop publishing packages and web page
+						editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
+						still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose
+						(injected humour and the like).
+					</div>
+				</div>
+				<div class="accordion">
+					<button class="header">
+						Collapsible Group Item #4
+						<i class="icon"></i>
+					</button>
+					<div class="body">
+						Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
+						from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,
+						looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of
+						the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33
+						of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise
+						on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit
+						amet..", comes from a line in section 1.10.32.
+					</div>
+				</div>
+			</div>
+		</div>
+
+
 	<script type="text/javascript" src="app.js"></script>
-	<script>
-	
-	  
-	  </script>
 </body>
 </html>
