--- a/index.html
+++ b/index.html
@@ -380,23 +380,23 @@
 			<div class="container">
 				<div class="accordion">
 					<button class="header">
-						Collapsible Group Item #1
-						<i class="icon"></i>
+						Vital Expenses
 					</button>
-					<div class="body">
-						There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
-						by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of
-						Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum
-						generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the
-						Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to
-						generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition,
-						injected humour, or non-characteristic words etc.
+					<div class="body accordion">
+						<button class="header">
+							Food
+						</button>
+						<button class="header">
+							Food
+						</button>
+						<button class="header">
+							Food
+						</button>
 					</div>
 				</div>
 				<div class="accordion">
 					<button class="header">
-						Collapsible Group Item #2
-						<i class="icon"></i>
+						Vital Expenses
 					</button>
 					<div class="body">
 						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
@@ -408,8 +408,7 @@
 				</div>
 				<div class="accordion">
 					<button class="header">
-						Collapsible Group Item #3
-						<i class="icon"></i>
+						Vital Expenses
 					</button>
 					<div class="body">
 						It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
