--- a/index.html
+++ b/index.html
@@ -376,62 +376,41 @@
 		</div>
 
 		
-		<div class="accordion_container modal-body">
-			<div class="container">
-				<div class="accordion">
-					<button class="header">
-						Vital Expenses
-					</button>
-					<div class="body accordion">
-						<button class="header">
-							Food
-						</button>
-						<button class="header">
-							Food
-						</button>
-						<button class="header">
-							Food
-						</button>
-					</div>
+		<div class="accordion modal-body">
+			<!-- Item 1 -->
+			<div class="accordion-item">
+			  <input type="checkbox" id="item-1" class="accordion-state"/>
+			  <label for="item-1" class="accordion-header">
+				<span>Vital Expenses</span>
+			  </label>
+			  <div class="accordion-content">
+				<div class="accordion-item accordion-secondary">
+				  One
 				</div>
-				<div class="accordion">
-					<button class="header">
-						Vital Expenses
-					</button>
-					<div class="body">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-						dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-						book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
-						unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
-						recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-					</div>
+				<div class="accordion-item accordion-secondary">
+					One
 				</div>
-				<div class="accordion">
-					<button class="header">
-						Vital Expenses
-					</button>
-					<div class="body">
-						It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
-						layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
-						'Content here, content here', making it look like readable English. Many desktop publishing packages and web page
-						editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
-						still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose
-						(injected humour and the like).
-					</div>
+				<div class="accordion-item accordion-secondary">
+					One
 				</div>
-				<div class="accordion">
-					<button class="header">
-						Collapsible Group Item #4
-						<i class="icon"></i>
-					</button>
-					<div class="body">
-						Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
-						from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,
-						looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of
-						the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33
-						of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise
-						on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit
-						amet..", comes from a line in section 1.10.32.
+			  </div>
+			</div>
+
+			<!-- Item 2 -->
+			<div class="accordion-item">
+				<input type="checkbox" id="item-2" class="accordion-state"/>
+				<label for="item-2" class="accordion-header">
+					<span>Vital Expenses</span>
+				</label>
+				<div class="accordion-content">
+					<div class="accordion-secondary">
+					One
+					</div>
+					<div class="accordion-secondary">
+						One
+					</div>
+					<div class="accordion-secondary">
+						One
 					</div>
 				</div>
 			</div>
